--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
 body{
   display: block;
   margin: 8px;
+  padding-left: 50px;
 }
 
 h1{
@@ -40,7 +41,7 @@ a:hover{
 }
 
 .container{
-    width: 500px;
+    width: 90%;
     margin: 30px auto;
 }
 
@@ -100,4 +101,34 @@ a:hover{
 
 #experiences td{
   padding: 10px;
+}
+
+#sidebar{
+  background-color: white;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  width: 65px;
+  text-align: center;
+  padding: 0px;
+}
+
+#sidebar ul{
+  list-style-type: none;
+  padding: 0px;
+}
+
+#sidebar li{
+  margin: 15px;
+}
+
+#sidebar a{
+  text-decoration: none;
+  font-size: 25px;
+  color: #DD5555;
+}
+
+.fa{
+  display: inline-block;
 }
